--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,15 @@
   <meta charset="utf-8">
   <title>Poison Oak Field Guide</title>
 </head>
+
 <body>
+
   <nav class="navbar navbar-expand-lg text-uppercase fixed-top">
     <div class="container">
       <a href="index.html">Home</a>
       <a href="identify.html">Identify</a>
-      <a href="treatment.html">Treatment</a>
       <a href="map.html">Map</a>
+      <a href="treatment.html">Treatment</a>
       <a href="game.html">Game</a>
     </div>
   </nav>
@@ -46,25 +48,28 @@
           </div>
         </div>
       </div>
+
       <div class="col-md-4">
         <div class="card index-images">
-          <h3 class="card-title">Treatment</h3>
-          <a href="treatment.html"><img class="card-img-top" src="./img/med.png"></a>
-          <div class="card-body">
-            <p>Learn the symptoms of poison oak and what to do if you come in contact with this plant sneaky plant.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card index-images">
-          <h3 class="card-title">Map</h3>
+          <h3 class="card-title">Avoid</h3>
           <a href="map.html"><img class="card-img-top" src="./img/map.jpeg"></a>
           <div class="card-body">
             <p>Use this map to identify as well as add locations around the metro area poison oak grows.</p>
           </div>
         </div>
       </div>
+
+      <div class="col-md-4">
+        <div class="card index-images">
+          <h3 class="card-title">Treat</h3>
+          <a href="treatment.html"><img class="card-img-top" src="./img/med.png"></a>
+          <div class="card-body">
+            <p>Learn the symptoms of poison oak and what to do if you come in contact with this plant sneaky plant.</p>
+          </div>
+        </div>
+      </div>
     </div>
+
   </div>
 
   <footer class="footer text-center">
@@ -75,34 +80,34 @@
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
           <p class="lead mb-0">400 SW 6th Ave #800,<br> Portland, OR 97204</p>
-          </div>
-
-          <!-- Footer Social Icons -->
-          <div class="col-lg-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Social Links</h4>
-            <a class="btn btn-outline-light btn-social mx-1" href="#">
-              <i class="fab fa-fw fa-2x fa-facebook-f"></i>
-            </a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#">
-              <i class="fab fa-fw fa-2x fa-twitter"></i>
-            </a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#">
-              <i class="fab fa-fw fa-2x fa-linkedin-in"></i>
-            </a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#">
-              <i class="fab fa-fw fa-2x fa-dribbble"></i>
-            </a>
-          </div>
-
-          <!-- Footer About Text -->
-          <div class="col-lg-4">
-            <h4 class="text-uppercase mb-4">Epicodus</h4>
-            <p class="lead mb-0">Epicodus group project
-              <a href="http://epicodus.com">Epicodus</a>.</p>
-            </div>
-
-          </div>
         </div>
+
+        <!-- Footer Social Icons -->
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Social Links</h4>
+          <a class="btn btn-outline-light btn-social mx-1" href="#">
+            <i class="fab fa-fw fa-2x fa-facebook-f"></i>
+          </a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#">
+            <i class="fab fa-fw fa-2x fa-twitter"></i>
+          </a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#">
+            <i class="fab fa-fw fa-2x fa-linkedin-in"></i>
+          </a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#">
+            <i class="fab fa-fw fa-2x fa-dribbble"></i>
+          </a>
+        </div>
+
+        <!-- Footer About Text -->
+        <div class="col-lg-4">
+          <h4 class="text-uppercase mb-4">Epicodus</h4>
+          <p class="lead mb-0">Epicodus group project
+            <a href="http://epicodus.com">Epicodus</a>.</p>
+          </div>
+
+        </div>
+      </div>
 
       <section class="copyright py-4 text-center text-white">
         <div class="container">
@@ -111,5 +116,5 @@
       </section>
     </footer>
 
-    </body>
-    </html>
+  </body>
+  </html>
