adjust css styling for map and images

--- a/src/map.html
+++ b/src/map.html
@@ -10,11 +10,10 @@
 
   #map {
     height: 100%;
+    width: 50%;
   }
   html, body {
     height: 85%;
-    margin: 0;
-    padding: 0;
   }
 </style>
 </head>
