fix game button positions.

--- a/src/map.html
+++ b/src/map.html
@@ -10,7 +10,7 @@
 
   #map {
     height: 100%;
-    width: 50%;
+    width:1108px;
   }
   html, body {
     height: 85%;
@@ -47,7 +47,7 @@ center: {lat: 45.5155, lng: -122.6793},
 zoom: 9
 });
 var markers = [
-['Forrest Park', 45.5842, -122.8121],
+['Forest Park', 45.5842, -122.8121],
 ['Mt. Tabor Park', 45.5180, -122.5948],
 ['Hood River', 45.7054, -121.5215],
 ['Lacamas Lake', 45.6184, -122.4276],
@@ -56,10 +56,10 @@ var markers = [
 ['Stub Stewart', 45.4413, -123.1134],
 ['Dog Mountain', 45.7201, -121.7051],
 ['Angels Rest', 45.5646, -122.1545],
-['Viento State Park', 45.4138, -121.4004],
+['Viento State Park', 45.6940067, -121.6678525],
 ['Champoeg Park', 45.2535, -122.9015],
 ['Tualatin River National Wildlife Refuge', 45.2320, -122.5130],
-['Spring Creek Hatchery State Park', 45.4342, -121.3233],
+['Spring Creek Hatchery State Park', 45.728333, -121.5425],
 ['Bridal Veil Trailhead', 45.55346, -122.18291],
 ['Shepperds Dell Hike',45.54647, -122.19754],
 ['Oaks Bottom Loop Hike', 45.46949, -122.65931],
@@ -73,7 +73,7 @@ var markers = [
 
 var infoWindowContent = [
 ['<div class="info_content">' +
-'<h3>Forrest Park</h3>' +
+'<h3>Forest Park</h3>' +
 '</div>'],
 ['<div class="info_content">' +
 '<h3>Mt. Tabor Park</h3>' +
