adjust footer, change fall/winter images

--- a/src/game.html
+++ b/src/game.html
@@ -4,7 +4,7 @@
   <script src="https://kit.fontawesome.com/4a05de5825.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Nanum+Gothic&display=swap" rel="stylesheet">
   <meta charset="utf-8">
-  <title>Poison Oak Treatments</title>
+  <title>Poison Oak - Game</title>
 </head>
 <body>
 
@@ -104,9 +104,8 @@
         <!-- Footer About Text -->
         <div class="col-lg-4">
           <h4 class="text-uppercase mb-4">Epicodus</h4>
-          <p class="lead mb-0">Epicodus group project
-            <a href="http://epicodus.com">Epicodus</a>.</p>
-          </div>
+          <p class="lead mb-0"><a href="http://epicodus.com">Epicodus</a> group project</p>
+        </div>
 
         </div>
       </div>
