--- a/src/index.html
+++ b/src/index.html
@@ -76,13 +76,11 @@
     <div class="container">
       <div class="row">
 
-        <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
           <p class="lead mb-0">400 SW 6th Ave #800,<br> Portland, OR 97204</p>
         </div>
 
-        <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Social Links</h4>
           <a class="btn btn-outline-light btn-social mx-1" href="#">
@@ -99,12 +97,11 @@
           </a>
         </div>
 
-        <!-- Footer About Text -->
+
         <div class="col-lg-4">
           <h4 class="text-uppercase mb-4">Epicodus</h4>
-          <p class="lead mb-0">Epicodus group project
-            <a href="http://epicodus.com">Epicodus</a>.</p>
-          </div>
+          <p class="lead mb-0"><a href="http://epicodus.com">Epicodus</a> group project</p>
+        </div>
 
         </div>
       </div>
