--- a/src/map.html
+++ b/src/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Map API</title>
+  <title>Poison Oak - Map</title>
   <script src="https://kit.fontawesome.com/4a05de5825.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Nanum+Gothic&display=swap" rel="stylesheet">
   <meta name="viewport" content="initial-scale=1.0">
@@ -203,9 +203,8 @@ var infoWindowContent = [
         <!-- Footer About Text -->
         <div class="col-lg-4">
           <h4 class="text-uppercase mb-4">Epicodus</h4>
-          <p class="lead mb-0">Epicodus group project
-            <a href="http://epicodus.com">Epicodus</a>.</p>
-          </div>
+          <p class="lead mb-0"><a href="http://epicodus.com">Epicodus</a> group project</p>
+        </div>
 
         </div>
       </div>
