--- a/src/treatment.html
+++ b/src/treatment.html
@@ -4,7 +4,7 @@
   <script src="https://kit.fontawesome.com/4a05de5825.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Nanum+Gothic&display=swap" rel="stylesheet">
   <meta charset="utf-8">
-  <title>Poison Oak Treatments</title>
+  <title>Poison Oak - Treatments</title>
 </head>
 <body>
 
@@ -74,7 +74,7 @@
               <li><strong>Maintenance:</strong> Poison Oak symptoms typically last 5-12 days. You can also use zinc oxide, benedryl, calamine lotion, and other topical products to ease discomfort.</li>
             </ol>
             <p> Tecnu poison oak soap and other products are available at most drug stores. Please make sure the product is safe and will not exacerbate or irriate symptoms. Good luck!</p><br>
-            <h6><i>If you are experiencing severe allergic reaction or symptoms last longer than usual. Seek medical assistance immediately! </i></h6>
+            <h6><i>If you are experiencing severe allergic reaction or symptoms that last longer than usual. Seek medical assistance immediately! </i></h6>
           </div>
         </div>
       </div>
@@ -111,9 +111,8 @@
       <!-- Footer About Text -->
       <div class="col-lg-4">
         <h4 class="text-uppercase mb-4">Epicodus</h4>
-        <p class="lead mb-0">Epicodus group project
-          <a href="http://epicodus.com">Epicodus</a>.</p>
-        </div>
+        <p class="lead mb-0"><a href="http://epicodus.com">Epicodus</a> group project</p>
+      </div>
 
       </div>
     </div>
