add transparent background to header

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,10 @@
 
   <header class="masthead container-treatment text-white text-center">
     <div class="container d-flex align-items-center flex-column">
-      <h1 class="masthead-heading text-uppercase mb-0">Poison Oak Field Guide</h1>
-      <h3 class="masthead-subheading font-weight-light mb-0">Identify - Avoid - Treat</h3>
+      <div class="headerMain">
+        <h1 class="masthead-heading text-uppercase mb-0">Poison Oak Field Guide</h1>
+        <h3 class="masthead-subheading font-weight-light mb-0">Identify - Avoid - Treat</h3>
+      </div>
     </div>
   </header>
 
