--- a/src/map.html
+++ b/src/map.html
@@ -31,8 +31,10 @@
 
   <header class="masthead container-treatment text-white text-center">
     <div class="container d-flex align-items-center flex-column">
-      <h1 class="masthead-heading text-uppercase mb-0">Poison Oak Field Guide</h1>
-      <h3 class="masthead-subheading font-weight-light mb-0">Avoid</h3>
+      <div class="headerMain">
+        <h1 class="masthead-heading text-uppercase mb-0">Poison Oak Field Guide</h1>
+        <h3 class="masthead-subheading font-weight-light mb-0">Avoid</h3>
+      </div>
     </div>
   </header>
 
