--- a/src/treatment.html
+++ b/src/treatment.html
@@ -20,12 +20,14 @@
 
   <header class="masthead container-treatment text-white text-center">
     <div class="container d-flex align-items-center flex-column">
-      <h1 class="masthead-heading text-uppercase mb-0">Poison Oak Field Guide</h1>
-      <h3 class="masthead-subheading font-weight-light mb-0">Treat</h3>
+      <div class="headerMain">
+        <h1 class="masthead-heading text-uppercase mb-0">Poison Oak Field Guide</h1>
+        <h3 class="masthead-subheading font-weight-light mb-0">Treat</h3>
+      </div>
     </div>
   </header>
-    <div class="container">
 
+    <div class="container">
 
     <div class="row">
       <div class="col-md-12">
