--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 <head>
   <script src="https://kit.fontawesome.com/4a05de5825.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Nanum+Gothic&display=swap" rel="stylesheet">
+   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
   <meta charset="utf-8">
   <title>Poison Oak Field Guide</title>
 </head>
@@ -33,15 +36,17 @@
         <div class="card">
           <h3 class="card-title">Bio</h3>
           <div class="card-body">
-            <p>Poison oak is a beautiful plant that grows throughout the Pacific northwest. It has scalloped leaves that grows in sets of three. The leaves look very similar to oak leaves. If you come in to contact with posion oak, there is a 75% chance that you will develop a rash. The rash will usually develop within 8 hours to 5 days. This guide was made to help indentify poison oak in it's nautural habitat.</p>
+            <p>Poison oak is a beautiful plant that grows throughout the Pacific northwest. It has scalloped leaves that grows in sets of three. The leaves look very similar to oak leaves. If you come in to contact with posion oak, there is a 75% chance that you will develop a rash. The rash will usually develop within 8 hours to 5 days. This guide was made to help indentify poison oak in it's natural habitat.</p>
           </div>
         </div>
+
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
         <div class="card index-images">
-          <h3 class="card-title">Identify</h3>
+          <a href="identify.html"><h3 class="card-title">Identify</h3></a>
+          <!-- <h3 class="card-title">Identify</h3> -->
           <a href="identify.html"><img class="card-img-top" src="./img/leaf.jpg"></a>
           <div class="card-body">
             <p>Know what to look out for throughout the different seasons as well as the different forms posion oak can take.</p>
@@ -51,7 +56,8 @@
 
       <div class="col-md-4">
         <div class="card index-images">
-          <h3 class="card-title">Avoid</h3>
+          <a href="map.html"><h3 class="card-title">Avoid</h3></a>
+          <!-- <h3 class="card-title">Avoid</h3> -->
           <a href="map.html"><img class="card-img-top" src="./img/map.jpeg"></a>
           <div class="card-body">
             <p>Use this map to identify as well as add locations around the metro area poison oak grows.</p>
@@ -61,13 +67,66 @@
 
       <div class="col-md-4">
         <div class="card index-images">
-          <h3 class="card-title">Treat</h3>
+          <a href="treatment.html"><h3 class="card-title">Treat</h3></a>
+          <!-- <h3 class="card-title">Treat</h3> -->
           <a href="treatment.html"><img class="card-img-top" src="./img/med.png"></a>
           <div class="card-body">
             <p>Learn the symptoms of poison oak and what to do if you come in contact with this plant sneaky plant.</p>
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-12">
+        <div class="card">
+          <h3 class="card-title">Gallery</h3>
+          <div class="card-body">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+              <ol class ="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100 carouselPic" src="./img/PoisonOak1.jpg" alt="">
+                </div>
+
+                <div class="carousel-item">
+                  <img class="d-block w-100 carouselPic" src="./img/PoisonOak.jpg" alt="">
+                </div>
+
+
+                <div class="carousel-item">
+                  <img class="d-block w-100 carouselPic" src="./img/PoisonOak2.jpeg" alt="">
+                </div>
+
+                <div class="carousel-item">
+                  <img class="d-block w-100 carouselPic" src="./img/PoisonOak3.jpg" alt="">
+                </div>
+
+                <div class="carousel-item">
+                  <img class="d-block w-100 carouselPic" src="./img/PoisonOak4.jpeg" alt="">
+                </div>
+              </div>
+              <a class="left-carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right-carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
 
   </div>
