--- a/src/game.html
+++ b/src/game.html
@@ -32,7 +32,7 @@
       <div class="col-md-12">
 
         <div class="card game1">
-          <h3 class="card-title">iSPy Poison Oak</h3>
+          <h3 class="card-title">iSpy Poison Oak</h3>
           <h2 class="text-center">Find all 4 poison oak plants</h2>
           <div class="card-body">
             <div class="game1Img">
@@ -80,13 +80,11 @@
     <div class="container">
       <div class="row">
 
-        <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
           <p class="lead mb-0">400 SW 6th Ave #800,<br> Portland, OR 97204</p>
         </div>
 
-        <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Social Links</h4>
           <a class="btn btn-outline-light btn-social mx-1" href="#">
@@ -109,14 +107,14 @@
           <p class="lead mb-0"><a href="http://epicodus.com">Epicodus</a> group project</p>
         </div>
 
-        </div>
       </div>
+    </div>
 
-      <section class="copyright py-4 text-center text-white">
-        <div class="container">
-          <small>Copyright &copy; Poison Oak Field Guide 2019</small>
-        </div>
-      </section>
-    </footer>
+    <section class="copyright py-4 text-center text-white">
+      <div class="container">
+        <small>Copyright &copy; Poison Oak Field Guide 2019</small>
+      </div>
+    </section>
+  </footer>
 </body>
 </html>
