--- a/src/map.html
+++ b/src/map.html
@@ -161,7 +161,7 @@ var infoWindowContent = [
     }
   }
   </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAv1Qp1W7wWZQsmAsq-CeEQswninXHL_FY&callback=initMap"
+  <script src="https://maps.googleapis.com/maps/api/js?key=INSERTKEY&callback=initMap"
   async defer></script>
   <br>
   <div class='container'>
